# terminal-chat-system

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  build.rs
proto/: helloworld.proto  oauth2.proto
proto/auth/: auth.proto
proto/chat/: chat.proto
src/chatnexus-chat/: auth.rs  chat.rs  helper.rs  server.rs
src/chatnexus-chat/auth/: auth_grpc.rs  error.rs  mod.rs
src/chatnexus-chat/chat/: chat_grpc.rs  error.rs  mod.rs
src/chatnexus-client/: client.rs
src/chatnexus-web/: chatter.rs  oauth2.rs  routes.rs  web.rs
src/client/: client.rs
src/server/: server.rs
src/server/services/: mod.rs
src/server/services/auth/: auth.rs  mod.rs
src/server/services/chat/: chat.rs  mod.rs
