[package]
name = "ChatNexus"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ChatNexus-Chat"
path = "src/chatnexus-chat/server.rs"

[[bin]]
name = "ChatNexus-Client"
path = "src/chatnexus-client/client.rs"

[dependencies]
prost = "0.11.8"
tonic = "0.9.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.12"
oauth2 = "4.3.0"
mongodb = "2.4.0"
redis = { version = "0.23.0", features = ["tokio-comp"] }
lazy_static = "1.4.0"
uuid = "1.3.0"
dotenv = "0.15.0"
rand = "0.8.5"
dialoguer = "0.10.3"

[build-dependencies]
tonic-build = "0.9.0"
