[package]
name = "ChatNexus"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ChatNexus-Chat"
path = "src/chatnexus-chat/server.rs"

[[bin]]
name = "ChatNexus-Client"
path = "src/chatnexus-client/client.rs"

[[bin]]
name = "ChatNexus-Web"
path = "src/chatnexus-web/web.rs"

[dependencies]
rocket = { version = "0.5.0-rc.2", features=["json"]}
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
prost = "0.11.8"
tonic = "0.9.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.12"
oauth2 = "4.3.0"
mongodb = {version = "2.4.0", features = ["tokio-runtime"]}
redis = { version = "0.23.0", features = ["tokio-native-tls-comp"] }
lazy_static = "1.4.0"
uuid = "1.3.0"
dotenv = "0.15.0"
rand = "0.8.5"
dialoguer = "0.10.3"
console = "0.15.5"
urlencoding = "2.1.2"
serde = "1.0.159"
serde_json = "1.0.95"
reqwest = { version = "0.11.16", features = ["json"] }

[build-dependencies]
tonic-build = "0.9.0"
